fixed temp drawer on mobile navigation bar

--- a/src/Styles/navbar-styles.css
+++ b/src/Styles/navbar-styles.css
@@ -20,6 +20,7 @@ nav {
 }
 
 .mobile-menu-container{ 
+  padding-bottom: 10px;
   display: flex;
   grid-template-columns: repeat(5, auto); 
   width: 100%;
